--- a/analyzer/pom.xml
+++ b/analyzer/pom.xml
@@ -6,5 +6,12 @@
     <version>0.0.1</version>
   </parent>
   <artifactId>analyzer</artifactId>
-  <name>analyzer</name>
+  <dependencies>
+	  <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-web</artifactId>
+</dependency>
+
+  </dependencies>
 </project>
