HW # 131_80 part1, but with test

--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,11 @@
 	</build>
 
 	<modules>
-		<module>analyzer</module>
+		
 		<module>avg-reducer</module>
 		<module>avg-populator</module>
+		<module>analyzer</module>
+		<module>email-notifier</module>
+		<module>sensor-range-provider</module>
 	</modules>
 </project>
