--- a/sensors/pom.xml
+++ b/sensors/pom.xml
@@ -5,21 +5,11 @@
     <artifactId>probes-monitoring</artifactId>
     <version>0.0.1</version>
   </parent>
-  <artifactId>email-notifier</artifactId>
-  <dependencies>
-	  <dependency>
-		  <groupId>org.springframework</groupId>
-		  <artifactId>spring-web</artifactId>
-	  </dependency>
+  <artifactId>sensors</artifactId>
+    <dependencies>
 	  <dependency>
 		  <groupId>org.springframework.boot</groupId>
-		  <artifactId>spring-boot-starter-mail</artifactId>
-	  </dependency>
-	  <dependency>
-		  <groupId>com.icegreen</groupId>
-		  <artifactId>greenmail-junit5</artifactId>
-		  <version>2.0.0</version>
-		  <scope>test</scope>
+		  <artifactId>spring-boot-starter-data-mongodb</artifactId>
 	  </dependency>
   </dependencies>
 </project>
